2008-05-18 Dietmar Warning
 * Small changes to compile under Sun Studio 11 for Solaris - may be useful in other 
   configurations too
 * configure.in
 * src/frontend/control.c
 * src/include/ngspice.h
 * src/maths/misc/equality.c
 * src/spicelib/devices/cpl/cplask.c
 * src/spicelib/devices/hisim/hsm1eval102.c
 * src/spicelib/devices/hisim/hsm1eval112.c
 * src/spicelib/devices/hisim/hsm1eval120.c
 * src/spicelib/devices/soi3/soi3acld.c

2008-05-12 Dietmar Warning
 * src/frontend/inp.c, src/frontend/inp.c, src/frontend/Makefile.am, src/Makefile.am,
   configure.in: global nodes and numparams now as default - configure switches not needed
   tested so far - but sure that some problems will raise.

2008-05-11 Dietmar Warning
 * src/misc/missing_math.c,h, src/math/misc/*.*: move math function to one place
 * src/include/ngspice.h, src/main.c, src/Makefile.am, src/maths/Makefile.am, 
   src/maths/misc/Makefile.am, src/misc/Makefile.am, configure.in: organization of libmathmisc.a
 * src/maths/misc/erfc.c: better erfc for lossy transmission line

2008-05-10 Holger Vogt
 * src/frontend/resource.c: Memory information is now stemming from the 
   /proc file system (LINUX) or using GlobalMemoryStatusEx and 
   GetProcessMemoryInfo (Windows).
   The old info system with sbrk(0) may still be used.  

2008-05-06 Holger Vogt
 * src/frontend/outitf.c: suppress printing of "Reference value" into log-file
   under Windows 

2008-05-03 Dietmar Warning
 * src/include/ngspice.h, src/main.c: srandom has a macro in ngspice.h as a 
   central place - should be sufficient also under windows

2008-05-01 Holger Vogt
 * src/frontend/com_hardcopy.c: bug no. 1885979 removed: currentgraph saved 
   and restored after hardcopy. 

2008-04-28 Holger Vogt
 * src/frontend/plotting/graf.c: remove iplot bug by changing line 686. 

2008-04-27 Dietmar Warning
 * src/frontend/inpcom.c: change _DEBUG to TRACE - unique debug switches