@@ -1,0 +1,13 @@
+/*************
+ * Header file for com_fft.c
+ * 2008 H. Vogt
+ ************/
+
+#ifndef FFT_H_INCLUDED
+#define FFT_H_INCLUDED
+
+void com_fft(wordlist *wl);
+
+static void fftext(float*, float*, long int, int);
+
+#endif
