@@ -256,6 +256,10 @@ struct comm spcp_coms[] = {
       { 0, 0, 0, 0 }, E_DEFHMASK, 0, 0,
       (void (*)()) NULL,
       ": Print a dump of the current circuit." } ,
+    { "fft", com_fft, FALSE, FALSE, TRUE,
+      { 0, 0, 0, 0 }, E_DEFHMASK, 1, LOTS,
+      (void (*)()) NULL,
+      "vector ... : Create a frequency domain plot with FFT." } ,      
     { "fourier", com_fourier, FALSE, FALSE, TRUE,
       { 0, 040000, 040000, 040000 }, E_DEFHMASK, 1, LOTS,
       (void (*)()) NULL,
